added gaugeController tests and swagger docs
