# src/controllers/gauges/gaugesController.js
@@ -3,11 +3,52 @@ const Gauge = require('../../models/gauge');
 const GaugeReading = require('../../models/gaugeReading');
 
 // +++++++++++++++++++++++++++++++++++++++++ All Data +++++++++++++++++++++++++++++++++++++++++++++
-// Get Information on all Gauges
+
+/**
+ * @swagger
+ * /gauges/all:
+ *   get:
+ *     description: Gets Gauge Info from all Gauges from database.
+ *     responses:
+ *        '200':    # status code
+ *          description: A JSON array of all available gauges
+ *          content:
+ *            application/json:
+ *              schema:
+ *                type: array
+ *                items:
+ *                    type: object
+ *                    properties:
+ *                      id:
+ *                      name:
+ *                        type: string
+ *                        example: NORTHWEST RIVER ABOVE MOUTH NEAR MOYOCK, NC
+ *                      siteCode:
+ *                        type: string
+ *                        example: 02043410
+ *                      latitude:
+ *                        type: float
+ *                        example: 36.5122222
+ *                      longitude:
+ *                         type: float
+ *                         example: -76.0866667
+ *                      units:
+ *                         type: string
+ *                         example: ft3/s
+ *                      flowType:
+ *                         type: string
+ *                      example: Streamflow, ft&#179;/s
+ *                      createdAt:
+ *                        type: string
+ *                      updatedAt:
+ *                        type: string
+ */
+
+// Get Information on all Gauges -- '/api/gauges/all'
 async function gaugeInformation(req, res, next) {
   const data = await Gauge.findAll();
   if (data) {
-    res.status(200).json(data);
+    res.status(200).json(data[0].dataValues);
   } else {
     res.status(500).json('error finding gauge information');
   }
